--- a/src/chat_app.html
+++ b/src/chat_app.html
@@ -6,13 +6,13 @@
   <link rel="stylesheet" href="css/default.css">
   <!-- 必要に応じてCSSを定義する．別ファイルとして定義しても構わない．-->
   <!-- ここから -->
-
+  <link rel="stylesheet" href="css/chat.css">
   <!-- ここまで -->
 </head>
 <body>
   <div class="container">
     <!-- 各自の学生証番号と名前で置き換えること -->
-    <div class="namebox">26000000000<br>立命 花子</div>
+    <div class="namebox">26001904662<br>YAN YIPEI</div>
     <h1>Chatアプリ</h1>
     <p>例題を参考にWebSocketを使用した簡単なチャットシステムを作成せよ．</p>
     <p>２つのチャットのコンポーネントを配置し，その間でチャットができることを確認せよ．</p>
