最终report 画图与私信功能

--- a/src/final_bot.html
+++ b/src/final_bot.html
@@ -9,10 +9,11 @@
 </head>
 <body>
   <div class="container">
+    <h1>チャットボットのページ</h1>
     <!-- React component を配置する．-->
     <div id="root"></div>
   </div>
   <!-- JavaScript の定義 -->
-  <script src="js/final.jsx"></script>
+  <script src="js/final_bot.jsx"></script>
 </body>
 </html>
