--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <li><a href="todo_list.html" target="_blank">第６～８週（ToDoリスト）</a></li>
       <li><a href="todo_db.html" target="_blank">第９～１１週（ToDoリストPythonサーバ版）</a></li>
       <li><a href="chat_app.html" target="_blank">第１２～１４週（チャットアプリ）</a></li>
-      <!-- <li><a href="final.html" target="_blank">第１５週（最終自由課題）</a></li> -->
+      <li><a href="final.html" target="_blank">第１５週（最終自由課題）</a></li>
       <!-- 以下は参考 -->
       <!-- <li><a href="text_chat.html" target="_blank">【参考】テキスト・チャットアプリ</a></li> -->
       <!-- <li><a href="chat_bot.html" target="_blank">【参考】チャット・ボット</a></li> -->
